--- a/Proj/Day2.html
+++ b/Proj/Day2.html
@@ -47,6 +47,10 @@ Or vice versa:
 </body>
 </html>
 
+The <a> tag in HTML, also known as an anchor tag, is used to create hyperlinks, which are clickable links that navigate users to other web pages or resources.
+href Attribute-The href attribute stands for "Hypertext Reference."
+Purpose: Specifies the URL of the page the link goes to
+
 2)src attribute,width and height attribute
 <!DOCTYPE html>
 <html>
@@ -58,6 +62,9 @@ Or vice versa:
 
 </body>
 </html>
+img tag and src attrribute and their full form.doesnt src attribute works without width and height attributes?
+The img tag in HTML stands for image.The src attribute stands for source. It is used to embed images into web pages. The src attribute within the img tag stands for source and specifies the path to the image file you want to display.
+No, the src attribute does not require the width and height attributes to work. The image will be displayed using its original dimensions if these attributes are not specified.
 
 3)The alt Attribute //learn as alternative
 The required alt attribute for the <img> tag specifies an alternate text for an image, if the image for some reason cannot be displayed. This can be due to a slow connection, or an error in the src attribute, or if the user uses a screen reader.
@@ -69,6 +76,9 @@ Note-If we try to display an image that does not exist, the value of the alt att
 The style attribute is used to add styles to an element, such as color, font, size, and more.
 Example
 <p style="color:red;">This is a red paragraph.</p>
+<p style="color: blue; font-size: 20px;">This is a styled paragraph.</p>
+Here color and font-size is a CSS property
+
 
 5)The lang Attribute
 You should always include the lang attribute inside the <html> tag, to declare the language of the Web page. This is meant to assist search engines and browsers.
@@ -83,6 +93,8 @@ The following example specifies English as the language:
 6)The title Attribute
 The title attribute defines some extra information about an element.
 The value of the title attribute will be displayed as a tooltip when you mouse over the element:
+A tooltip is a small, informative popup that appears when a user hovers their mouse over an element with the title attribute. It provides additional information about the element without cluttering the web page
+  
 
 Example
 <p title="I'm a tooltip">This is a paragraph.</p> //when we hover over the line "this is ..para." it will show "i am a tooltip
