--- a/Proj/Day3.html
+++ b/Proj/Day3.html
@@ -27,7 +27,7 @@ The number of lines in a paragraph depends on the size of the browser window. If
 
 Output-This paragraph contains a lot of spaces in the source code, but the browser ignores it.
 
-2)HTML Horizontal Rules //learn rule as line
+2)<hr> tag - Horizontal Rules //learn rule as line
 The <hr> tag defines a thematic break in an HTML page, and is most often displayed as a horizontal rule.
 The <hr> element is used to separate content (or define a change) in an HTML page:
 
