--- a/Proj/Day3.html
+++ b/Proj/Day3.html
@@ -95,6 +95,8 @@ Example
   Oh, bring back my Bonnie to me.
 </pre>
 
+  The above text will be printed in teh same line.In html it ignores spaces.
+
 
 
 
