--- a/Proj/Day3.html
+++ b/Proj/Day3.html
@@ -83,7 +83,7 @@ Example
 Solution - The HTML <pre> Element //leanr as preserve element
 The HTML <pre> element defines preformatted text.
 The text inside a <pre> element is displayed in a fixed-width font (usually Courier), and it preserves both spaces and line breaks:
-
+The <pre> tag in HTML stands for preformatted text. It is used to display text exactly as it is written in the HTML code, preserving all spaces and line breaks. This can be useful for displaying code, poems, or any text where the formatting is important.
 Example
 <pre>
   My Bonnie lies over the ocean.
