--- a/Proj/Day10.html
+++ b/Proj/Day10.html
@@ -1,1 +1,12 @@
+CSS, 
+or Cascading Style Sheets, is a language used to describe the presentation of a web page written in HTML or XML.
+It controls how elements on a web page should be displayed by defining styles such as colors, fonts, layout, and spacing.
+CSS helps separate content from design, making it easier to maintain and update web pages.
 
+CSS can be added to HTML documents in 3 ways:
+
+Inline - by using the style attribute inside HTML elements
+Internal - by using a <style> element in the <head> section
+External - by using a <link> element to link to an external CSS file
+<hr>
+  
